# Book_legion

./: .envrc  .gitignore  Cargo.toml  README.md  TODO  commands.sh  docker-compose.yaml  example-env  staging.yaml  test.html  test.txt
kindlelector/: app.py  build.sh  requirements.txt
kindlelector/static/: index.html  style.css
lector/: Cargo.toml  Dockerfile  text_architect.md
lector/assets/: main.css  tailwind.css  vector-free-play-video-audio_901408-519.avif
lector/notes/: next_page.md
lector/playground/: Cargo.toml
lector/src/: assets.rs  main.rs  models.rs  styles.rs
lector/src/components/: access_token_refreshing.rs  book_cover.rs  global_state_updater.rs  hero.rs  load_book.rs  load_manifest.rs  mod.rs  parse_book.rs  server_api.rs
lector/src/components/audio/: audio_buttons.rs  audio_controls.rs  audio_sourcing.rs  audioplayer.rs  chunk_calculator.rs  chunk_sourcing.rs  mod.rs  playback_ticker.rs
lector/src/components/book/: book_buttons.rs  book_renderer.rs  book_sourcing.rs  chunk_calculator.rs  css_fetcher.rs  mod.rs  todo
lector/src/domain/: audio.rs  book.rs  cover.rs  cursor.rs  library.rs  login.rs  mod.rs  page_backwards.rs  page_forward.rs  series.rs  text.rs  text_locator.rs  text_renderer.rs  wake.rs
lector/src/infra/: audio.rs  auth.rs  book.rs  chapters.rs  covers.rs  cursor.rs  login.rs  manifest.rs  mod.rs  series.rs
lector/src/ui/: audio.rs  book.rs  bookedit.rs  library.rs  login.rs  mod.rs  series.rs  seriesedit.rs  text.rs
lector/src/ui/components/: card.rs  mod.rs  top_bar.rs
lector/src/views/: audioview.rs  bookview.rs  home.rs  library_view.rs  loginview.rs  mod.rs  readview.rs
lector_old/: AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile
lector_old/assets/: tailwind.css
lector_old/src/: main.rs
lector_old/src/components/: global_state_updater.rs  load_manifest.rs  mod.rs  name_hook.rs  server_api.rs
lector_old/src/components/audio/: audio_controls.rs  audio_sourcing.rs  audioplayer.rs
lector_old/src/components/book/: book_sourcing.rs  chunk_calculator.rs
lector_old/src/views/: bookview.rs  mod.rs  readview.rs
playground/: Cargo.toml  eskau.json  eskau_fixed.json
playground/src/: main.rs
pythontest/: Dockerfile  app.py  requirements.txt  test.sh
pythontest/static/: app.js  index.html  style.css
tribune_archivum/: .envrc  Cargo.toml  Dockerfile  book.json  generated_toc.ncx  no_toc.xml  test.json  test_goals.md
tribune_archivum/src/: analysis.rs  main.rs
tribune_archivum/src/lib/: create.rs  gate.rs  generate_book.rs  generator.rs  helpers.rs  info_sender.rs  mod.rs  models.rs  nav_model.rs  opf_model.rs  orchestrator.rs  toc_model.rs  verifiers.rs  verify.rs
tribune_archivum/src/tests/: api_tests.rs  epub_integrity_tests.rs  mod.rs  spec_compliance.rs  test_epub.rs  test_epub_generator.rs  toc_generator_tests.rs  toc_integrity_tests.rs  zip_safety_tests.rs
tribune_dictio/: Dockerfile  init.py  main.py  main.spec  pyproject.toml  run-docker.sh
tribune_logistica/: .envrc  API-skeleton.md  Cargo.toml  Dockerfile  build.sh  coverage.out  go.mod  go.sum  main.go  test.sh  tribune_logistica.md
tribune_logistica/config/: user.json
tribune_logistica/internal/api/: api.go  authentication_endpoints.go  authentication_endpoints_test.go  book_endpoints.go  book_endpoints_test.go  library_endpoints.go  library_endpoints_test.go
tribune_logistica/internal/buffer/: buffer.go  buffer_test.go
tribune_logistica/internal/buffer/tests/: buffer_test.go
tribune_logistica/internal/epub/: chunk.go  chunk_test.go  epub.go  epub_test.go  linearization.go  linearization_test.go  prettyspine.go  prettyspine_test.go  spine.go  spine_test.go
tribune_logistica/internal/login/: login.go  login_test.go
tribune_logistica/internal/manager/: manager_test.go  manger.go
tribune_logistica/internal/storage/: db_storage_test.go  json_db.go  mock_storage_test.go  sql.go  storage.go
tribune_logistica/internal/tts/: tts.go
tribune_logistica/internal/types/: types.go  types_test.go
tribune_logistica/internal/user/: user.go  user_test.go
tribune_logistica/public/: index.html
tribune_logistica/public/assets/: lector-dxh324f4919317bf486.js  lector_bg-dxhfb63829b3b45a37f.wasm  main-dxh2f89a862e1b410.css  tailwind-dxhb04bd2e53487435.css
tribune_logistica/src/: book_handler.rs  logic.rs  main.rs  test.rs
tribune_logistica/src/lib/: audio_gen_handler.rs  audio_handler.rs  book_handler.rs  buffer_handler.rs  db_handlers.rs  logic.rs  mod.rs  models.rs  password_handler.rs  update_handler.rs
tribune_logistica/src/test/: audio_handler_tests.rs  audio_tests.rs  book_handler_tests.rs  buffer_handler_tests.rs  db_handler_tests.rs  helpers.rs  mod.rs  update_tests.rs
tribune_porta/: Cargo.toml  config.json
tribune_porta/Warforged/: Warforged.epub
tribune_porta/src/: driver.rs  epub_creator.rs  main.rs  parser.rs
tribune_secreto/: Cargo.toml  user.json
tribune_secreto/src/: main.rs
tribune_vox/: Cargo.toml  book.json  run-docker.sh
tribune_vox/src/: main.rs
tribune_vox/src/lib/: audio_processing.rs  chapter_finding.rs  chapter_handler.rs  epub_processing.rs  finalizer.rs  helpers.rs  mod.rs  models.rs
