[package]
name = "lector"
version = "0.1.0"
authors = ["pete02 <petrik.rasanen@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
futures-timer = "3.0.3"
gloo-timers = "0.3.0"
js-sys = "0.3.82"
reqwasm = { version="0.5.0", features = ["json"]}
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = {version="0.3.82", features=["Url", "Blob", "BlobPropertyBag", "HtmlAudioElement"]}
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
