[package]
name = "lector"
version = "0.3.0"
authors = ["pete02 <petrik.rasanen@gmail.com>"]
edition = "2024"


[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.7.1", features = ["router"] }
futures-timer = "3.0.3"
gloo-timers = "0.3.0"
js-sys = "0.3.82"
kuchiki = "0.8.1"
once_cell = "1.21.3"
regex = "1.12.2"
reqwasm = { version="0.5.0", features = ["json"]}
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = {version="0.3.85", features=["Url", "Blob", "BlobPropertyBag", "HtmlAudioElement", "Storage","Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Range",
    "DomRect",
    "DomRectList",
    "Navigator",
    "WakeLock",
]}
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
mock = []
