[package]
name = "tribune_archivum"
version = "0.1.0"
edition = "2024"


[dependencies]
epub = "2.1.5"
regex = "1.12.2"
scraper = "0.24.0"
serde = {version="1.0.228", features= ["derive"]}
serde_json = "1.0.145"
zip = "0.6.0"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0.101"
quick-xml = "0.39.0"
