[package]
name = "tribune_archivum"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.101"
dotenvy = "0.15.7"
env_logger = "0.11.9"
features = "0.10.0"
full = "0.3.0"
futures = "0.3.32"
log = "0.4.29"
pathdiff = "0.2.3"
quick-xml = { version = "0.39.0", features = ["encoding"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
tempdir = "0.3.7"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
xml_schema_generator = "0.6.22"
zip = "7.4.0"

