[package]
name = "tribune_logistica"
version = "0.1.0"
edition = "2024"

[dependencies]
epub = "2.1.5"
futures = "0.3.31"
futures-util = "0.3.31"
mp3-duration = "0.1.10"
serde = {version="1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
