[package]
name = "tribune_logistica"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/mod.rs"

[dependencies]
epub = "2.1.5"
futures = "0.3.31"
futures-util = "0.3.31"
mp3-duration = "0.1.10"
serde = {version="1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
zip = "6.0.0"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"
base64 = "0.22.1"
serial_test = "3.2.0"
regex = "1.12.2"
