[package]
name = "tribune_vox"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/mod.rs"


[dependencies]
epub = "2.1.4"
regex = "1.12.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json="1.0"
hound = "3.5"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.228"
clap = { version = "4.5.50", features = ["derive"] }
scraper = "0.24.0"
zip = "6.0.0"
chrono = "0.4.42"
